# EventEllipsometer

./: .gitignore  CMakeLists.txt  README.md  build_cpp.py  calib_qwp_offset.py  calib_threshold.py  check_valid_mueller.py  optimize_video.py  pyproject.toml  visualize.py
Arduino/EventEllipsometry/: EventEllipsometry.ino
WaveForms/: calib_thresh.dwf3work  generate_wave.py
calib/: README.md  __init__.py
calib/qwp_offset/: phi1.txt  phi2.txt
calib/refractory_period/: table.py
calib/thresh/off/: diff0_diff_on-10_diff_off-10.npy  diff0_diff_on-20_diff_off-20.npy  diff0_diff_on-35_diff_off-35.npy  diff0_diff_on0_diff_off0.npy  diff10_diff_on-10_diff_off-10.npy  diff10_diff_on-20_diff_off-20.npy  diff10_diff_on-35_diff_off-35.npy  diff10_diff_on0_diff_off0.npy  diff15_diff_on-10_diff_off-10.npy  diff15_diff_on-20_diff_off-20.npy  diff15_diff_on-35_diff_off-35.npy  diff15_diff_on0_diff_off0.npy  diff20_diff_on-10_diff_off-10.npy  diff20_diff_on-20_diff_off-20.npy  diff20_diff_on-35_diff_off-35.npy  diff20_diff_on0_diff_off0.npy
calib/thresh/on/: diff0_diff_on-10_diff_off-10.npy  diff0_diff_on-20_diff_off-20.npy  diff0_diff_on-35_diff_off-35.npy  diff0_diff_on0_diff_off0.npy  diff10_diff_on-10_diff_off-10.npy  diff10_diff_on-20_diff_off-20.npy  diff10_diff_on-35_diff_off-35.npy  diff10_diff_on0_diff_off0.npy  diff15_diff_on-10_diff_off-10.npy  diff15_diff_on-20_diff_off-20.npy  diff15_diff_on-35_diff_off-35.npy  diff15_diff_on0_diff_off0.npy  diff20_diff_on-10_diff_off-10.npy  diff20_diff_on-20_diff_off-20.npy  diff20_diff_on-35_diff_off-35.npy  diff20_diff_on0_diff_off0.npy
docs/: synthetic_data.md
recordings/: filenames.py
scripts/: calib_qwp_offset.py  calib_refractory_period.py  calib_thresh_visualize_all.py  calib_threshold.py  delete_masked_events.py  ellipsometry_sympy.py  generate_filter_code.py  imgs2event.py  imgs2video.py  reconstruct_mm.py  record_calib_thresh.py  render_images.py  run_optim_synthetic_batch.py  synthetic_mm_gt.py
src/: array_mueller.h  dataframe.h  equations.cpp  equations.h  eventellipsometry.cpp  eventmap.h  optim.cpp  optim.h  spatial_event_map.h
src/DVS_Voltmeter/: __init__.py
src/DVS_Voltmeter/src/: config.py  simulator.py  simulator_utils.py
src/cpp/: array.h  dataframe.h  equations.cpp  equations.h  eventellipsometer.cpp  eventellipsometry.cpp  eventmap.h  loss.h  mueller.h  optim.cpp  optim.h  utils.h
src/eventellipsometer/: __init__.py  event_io.py  event_record.py  eventmap.py  noise.py  utils.py
src/eventellipsometry/: __init__.py  event_io.py  event_record.py  event_structure.py  eventmap.py  noise.py  utils.py  utils_mueller.py  visualize.py
