[project]
name = "eventellipsometry"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ryota Maeda", email = "42407614+elerac@users.noreply.github.com" }
]
dependencies = [
    "opencv-python>=4.10.0.84",
    "matplotlib>=3.9.1",
    "h5py>=3.11.0",
    "polanalyser>=3.0.0",
    "nanobind==2.0",
    "tqdm>=4.64.1",
    "torch==2.3.1+cpu",
    "typing-extensions>=4.9.0",
    "numpy>=1.26.3",
    "ipykernel>=6.29.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/eventellipsometry"]

[project.scripts]
build_cpp = "build_cpp:main"
record = "eventellipsometry.event_record:main"
raw2npz = "eventellipsometry.event_io:main"

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

